@@ -402,12 +402,13 @@
 				digits.push( $.escapeRE( localised[i] ) );
 			}
 		}
-		var digitClass = '[' + digits.join( '', digits ) + ']';
+		ts.digitClass = '[' + digits.join( '', digits ) + ']';
 
 		// We allow a trailing percent sign, which we just strip. This works fine
 		// if percents and regular numbers aren't being mixed.
 		ts.numberRegex = new RegExp("^(" + "[-+\u2212]?[0-9][0-9,]*(\\.[0-9,]*)?(E[-+\u2212]?[0-9][0-9,]*)?" + // Fortran-style scientific
-		"|" + "[-+\u2212]?" + digitClass + "+[\\s\\xa0]*%?" + // Generic localised
+		"|" + "[-+\u2212]?" + ts.digitClass + "+[\\s\\xa0]*%?" + // Generic localised
+		"|([-+\u2212]?" + ts.digitClass + "+[\\s\\xa0]+)*" + ts.digitClass + "+[\\s\\xa0]*[\\/][\\s\\xa0]*" + ts.digitClass + "+" + // Fractions
 		")$", "i");
 	}
 
@@ -502,6 +503,9 @@
 			],
 			time: [
 				new RegExp( /^(([0-2]?[0-9]:[0-5][0-9])|([0-1]?[0-9]:[0-5][0-9]\s(am|pm)))$/)
+			],
+			fractions: [
+				new RegExp( "^(?:([-+\u2212]?" + ts.digitClass + "+)[\\s\\xa0]+)*(" + ts.digitClass + "+)[\\s\\xa0]*[\\/][\\s\\xa0]*(" + ts.digitClass + "+)" )
 			]
 		};
 	}
@@ -909,6 +913,19 @@
 			return $.tablesorter.numberRegex.test( $.trim( s ));
 		},
 		format: function( s ) {
+			var values = ts.rgx.fractions[0].exec($.trim(s));
+			if( values != null ) {
+				// A fraction
+				var retVal = 0;
+				var decimal = $.tablesorter.formatDigit(values[2]) / $.tablesorter.formatDigit(values[3]);
+				if( values[1] != undefined ) {
+					retVal = $.tablesorter.formatDigit(values[1]);
+				}
+				if( !isNaN(decimal) && isFinite(decimal) ) {
+					retVal += decimal;
+				}
+				return retVal;
+			}
 			return $.tablesorter.formatDigit(s);
 		},
 		type: 'numeric'
