@@ -21,6 +21,7 @@ production.
   contentSub, ... The same div often also contains the class mw-content-ltr/rtl.
 * (bug 34475) Add support for IP/CIDR notation to tablesorter
 * (bug 27619) Remove preference option to display broken links as link?
+* (bug 15404) Add support for sorting fractions in jquery.tablesorter
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
